Imprimindo dados na dela do Banco de dados

--- a/src/main/resources/templates/equipamento/formEquipamento.html
+++ b/src/main/resources/templates/equipamento/formEquipamento.html
@@ -18,6 +18,10 @@
 			<div class="input-field col s3">
 				Serie: <input type="text" value="" name="serie"/>
 			</div>
+			<div class="input-field col s6">
+				Setor de Origem: <input type="text" value="" name="setor"/>
+			</div>
+			
 			<div class="input-field col s3">
 				Marca: <input type="text" value="" name="marca"/>
 			</div>
