--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-	<title>LocalizarApp</title>
+ <head>
+	<title>EventosApp</title>
 	 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
@@ -12,35 +12,47 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <link rel="stylesheet" href="style/styleCss.css"/>
 </head>
-
 <body>
-	
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Lista de Equipzmentos</a>
+		      <a href="#" class="brand-logo">Lista de Equipamentos</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 		        <li><a href="/cadastrarEquipamento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar evento</a></li>
 		      </ul>
 		    </div>
 		</nav>
-	
 	</header>
-	<body>
-		<div th:each ="equipamento : ${equipamentos}">
-		<dic class = "row">
-				<p><span th:text="${equipamento.nome}"></span></p>
-				<p><span th:text="${equipamento.patrimonio}"></span></p>
-				<p><span th:text="${equipamento.serie}"></span></p>
-				<p><span th:text="${equipamento.marca}"></span></p>
-				<p><span th:text="${equipamento.setor}"></span></p>
-				<p><span th:text="${equipamento.modelo}"></span></p>
-				<p><span th:text="${equipamento.tag}"></span></p>
-				</div>
-				
-				</div>
-				
 
+	<table class = "container">
+		<thead>
+			<tr>
+				<th>Nome</th>
+				<th>Patrimonio</th>
+				<th>Serie</th>
+				<th>Marca</th>
+				<th>Modelo</th>
+				<th>Setor</th>
+				<th>TagId</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="equipamento : ${equipamentos}">
+				<td><span th:text="${equipamento.nome}"></span></td>
+				<td><span th:text="${equipamento.patrimonio}"></span></td>
+				<td><span th:text="${equipamento.serie}"></span></td>
+				<td><span th:text="${equipamento.marca}"></span></td>
+				<td><span th:text="${equipamento.modelo}"></span></td>
+				<td><span th:text="${equipamento.setor}"></span></td>
+				<td><span th:text="${equipamento.tag}"></span></td>
+			</tr>
+		</tbody>
+	
+	</table>
+				
+				
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 
 </html>
