--- a/src/main/resources/templates/equipamento/detalhesEquipamento.html
+++ b/src/main/resources/templates/equipamento/detalhesEquipamento.html
@@ -34,6 +34,10 @@
 			<p>Setor de Origem: <span th:text = "${equipamento.setor}"></span></p>
 			<p>Tag Id: <span th:text = "${equipamento.tag}"></span></p>
 		</div>
+		<form method = "post">
+			Posição teste :<input type="text" value="" name = "posicao">
+			<button class="waves-effect waves-light btn" type = "submit"> Adicionar </button>
+		</form>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
