--- a/src/main/resources/templates/equipamento/detalhesEquipamento.html
+++ b/src/main/resources/templates/equipamento/detalhesEquipamento.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
- <head>
-	<title>App</title>
+<head>
+	<title>EventosApp</title>
 	 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
@@ -10,19 +10,23 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
       <link rel="stylesheet" href="style/styleCss.css"/>
 </head>
 <body>
+
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
 		      <a href="#" class="brand-logo">Equipamento</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		       <li><a href="/equipamentos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de equipamentos</a></li>
+		        <li><a href="/equipamentos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Equipamentos</a></li>
 		      </ul>
 		    </div>
 		</nav>
 	</header>
+	
+	
 	
 	<div th:each = "equipamento : ${equipamento}" class = "container">
 		<div class="row">
@@ -35,8 +39,8 @@
 			<p>Tag Id: <span th:text = "${equipamento.tag}"></span></p>
 		</div>
 		<form method = "post">
-			Posição teste :<input type="text" value="" name = "posicao">
-			<button class="waves-effect waves-light btn" type = "submit"> Adicionar </button>
+			Posição <input type="text" value="" name="posicao"/>
+			<button class="waves-effect waves-light btn" type="submit">Salvar</button>
 		</form>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
