--- a/src/main/resources/templates/listaEquipamentos.html
+++ b/src/main/resources/templates/listaEquipamentos.html
@@ -20,7 +20,7 @@
 		    <div class="nav-wrapper">
 		      <a href="#" class="brand-logo">App</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/cadastrarEquipamento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar evento</a></li>
+		        <li><a href="/cadastrarEquipamento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Equipamento</a></li>
 		      </ul>
 		    </div>
 		</nav>
