--- a/src/main/resources/templates/equipamento/detalhesEquipamento.html
+++ b/src/main/resources/templates/equipamento/detalhesEquipamento.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-	<title>EventosApp</title>
+	<title>App</title>
 	 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
@@ -43,6 +43,16 @@
 			Posição <input type="text" value="" name="posicao"/>
 			<button class="waves-effect waves-light btn" type="submit">Salvar</button>
 		</form>
+		
+		<h5>Rastreamento</h5>
+	</div>
+	
+	<div class = "container" th:each= "localizacao : ${localizacoes}">
+		<div class= "row">
+			<div class="input-field col s6">
+				Posição: <p><span th:text="${localizacao.posicao}"></span></p>
+			</div>
+		</div>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
