--- a/src/main/resources/templates/equipamento/formEquipamento.html
+++ b/src/main/resources/templates/equipamento/formEquipamento.html
@@ -18,7 +18,7 @@
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Evento</a>
+		      <a href="#" class="brand-logo">Cadastro</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 		        <li><a href="/equipamentos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Equipamentos</a></li>
 		      </ul>
