--- a/src/main/resources/templates/equipamento/detalhesEquipamento.html
+++ b/src/main/resources/templates/equipamento/detalhesEquipamento.html
@@ -11,7 +11,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       
-      <link rel="stylesheet" href="style/styleCss.css"/>
+     <link rel="stylesheet" href="style/styleCss.css"/>
 </head>
 <body>
 
@@ -28,7 +28,8 @@
 	
 	
 	
-	<div th:each = "equipamento : ${equipamento}" class = "container">
+	<div th:each = "equipamento : ${equipamento}" class = "container detalhesEquipamento">
+	<h5>Detalhes do Equipamento</h5>
 		<div class="row">
 			<p>Codigo: <span th:text = "${equipamento.codigo}"></span></p>
 			<p>Nome: <span th:text = "${equipamento.nome}"></span></p>
@@ -39,27 +40,32 @@
 			<p>Setor de Origem: <span th:text = "${equipamento.setor}"></span></p>
 			<p>Tag Id: <span th:text = "${equipamento.tag}"></span></p>
 		</div>
+		</div>
+		
 		
 		<th:block th:include="mensagemValidacao"></th:block>
 		
+		<div class="container formLocalizacao">
 		<form method = "post">
 			Posição <input type="text" value="" name="posicao"/>
 			<button class="waves-effect waves-light btn" type="submit">Salvar</button>
 		</form>
+		</div>
 		
+		
+	<div class="container containerPosicao">
 		<h5>Rastreamento</h5>
-	</div>
 	
-	
-	
-	<div class = "container" th:each= "localizacao : ${localizacoes}">
-		<div class= "row">
-			<div class="input-field col s6">
-				Posição: <p><span th:text="${localizacao.posicao}"></span></p>
+			<div class = "container" th:each= "localizacao : ${localizacoes}">
+				<div class= "row">
+					<div class="input-field col s6">
+						Posição: <p><span th:text="${localizacao.posicao}"></span></p>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+		
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 </html>
