--- a/src/main/resources/templates/equipamento/formEquipamento.html
+++ b/src/main/resources/templates/equipamento/formEquipamento.html
@@ -25,7 +25,10 @@
 		    </div>
 		</nav>
 	</header>
+	
+	
 		<th:block th:include="mensagemValidacao"></th:block>
+		<dir class="container formEquipamento">
 		<form class="container" method="post">
 		Nome: <input type="text" value="" name="nome"/>
 		<div class="row">
@@ -52,7 +55,7 @@
 			</div>
 		</div>
 		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
-	
+		</dir>
 	</form>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
