Deletando pai e filhos

--- a/src/main/resources/templates/listaEquipamentos.html
+++ b/src/main/resources/templates/listaEquipamentos.html
@@ -38,6 +38,7 @@
 				<th>Modelo</th>
 				<th>Setor</th>
 				<th>TagId</th>
+				<th>Deletar</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -51,6 +52,7 @@
 				<td><span th:text="${equipamento.modelo}"></span></td>
 				<td><span th:text="${equipamento.setor}"></span></td>
 				<td><span th:text="${equipamento.tag}"></span></td>
+				<td><a class="waves-effect waves-light btn-small" th:href="@{/deletarEquipamento{codigo}(codigo = ${equipamento.codigo}) }"><span th:text="Deletar"><i class="material-icons left">delete</i></a></td>
 			</tr>
 		</tbody>
 	
