Submetendo localizacao ao Mysql. Ajustar ainda o Banco

--- a/src/main/resources/templates/equipamento/detalhesEquipamento.html
+++ b/src/main/resources/templates/equipamento/detalhesEquipamento.html
@@ -45,12 +45,12 @@
 		
 		<th:block th:include="mensagemValidacao"></th:block>
 		
-		<div class="container formLocalizacao">
+		<!--<div class="container formLocalizacao">
 		<form method = "post">
 			Posição <input type="text" value="" name="posicao"/>
 			<button class="waves-effect waves-light btn" type="submit">Salvar</button>
 		</form>
-		</div>
+		</div>-->
 		
 		
 	<div class="container containerPosicao">
